manifests/administration/shared-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: admin
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: http
    # hostname: "foo.example.com"
    # protocol: HTTPS
    # port: 443
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            shared-gateway-access: "true"
    # tls:
    #   certificateRefs:
    #   - name: foo-example-com
